# ptcgp_toolkit

./: .prettierrc  README.md  index.html  package.json  vite.config.ts
src/: Routes.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: .gitignore  Cargo.toml
src-tauri/src/core/src/: lib.rs
src-tauri/src/core/src/decrypt/: mod.rs
src-tauri/src/core/src/extract/: mod.rs
src-tauri/src/core/src/proto/: circular.rs  extractor.rs  field.rs  map.rs  message.rs  mod.rs  one_of.rs  package.rs  proto_enum.rs  schema.rs  service.rs
src-tauri/src/core/src/proto/writer/: field.rs  map.rs  message.rs  message_group.rs  mod.rs  one_of.rs  proto_enum.rs  service.rs
src-tauri/src/core/src/unity/: mod.rs
src-tauri/src/core/src/unity/binary/: arm64.rs  elf.rs  mod.rs  search.rs
src-tauri/src/core/src/unity/utils/: blob_value.rs  complex_type.rs  global_metadata.rs  il2cpp.rs  il2cpp_type.rs  il2cpp_type_definition.rs  mod.rs  read_only.rs
src/views/Apks/: ApksPage.tsx
src/views/Gmetadata/: GMetaPage.tsx
src/views/Headless/: HeadlessPage.tsx
src/views/Home/: HomePage.tsx
src/views/Layout/: Layout.tsx  Nav.tsx
src/views/ProtoExtractor/: ProtoPage.tsx
