[package]
name = "ptcgp_toolkit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ptcgp_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

# Mine owo
zip = "5.1.1"
beta = { path = "src/core" }
goblin = "0.10.1"
anyhow = "1.0"
aes = "0.8.4"
ctr = "0.9.2"
nohash-hasher = "0.2.0"
pastey = "0.1.1"
memchr = "2.7.5"
hashbrown = { version = "0.16.0", features = ["serde"] }
phf = { version = "0.13.1", features = ["macros"] }
petgraph = "0.8.2"
heck = "0.5.0"
itertools = "0.14.0"
