[package]
name = "beta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
goblin = "0.10.1"
aes = "0.8.4"
ctr = "0.9.2"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
nohash-hasher = "0.2.0"
pastey = "0.1.1"
memchr = "2.7.5"
hashbrown = { version = "0.16.0", features = ["serde"] }
phf = { version = "0.13.1", features = ["macros"] }
petgraph = "0.8.2"
heck = "0.5.0"
itertools = "0.14.0"